--- a/friends_forlife/app/templates/app/chip_info.html
+++ b/friends_forlife/app/templates/app/chip_info.html
@@ -78,7 +78,7 @@
 				<main id="main">
 					<div class="block">
 						<div class="mainTop"></div>
-						<div class="mainContent mainContentChipSearch">
+						<div class="mainContent">
 				    		<h1>תוצאות החיפוש</h1>
                                 {% if dog_chip_info.name != "None" %}
                                 <div id="dog_div" class="chipInfoPage">
@@ -113,11 +113,11 @@
 												</p>
                                                 <br>
 												{%  if dog_chip_info.is_castrated == "כן" %}
-												<p style="color:#2ecc71; font-family: trashimclm;">
+												<p style="color:#2ecc71; font-family: trashimclm; font-size: 18px;">
 													מסורס
 												</p>
 												{% else %}
-												<p style="color:#e74c3c; font-family: trashimclm;">
+												<p style="color:#e74c3c; font-family: trashimclm; font-size: 18px;">
 													לא מסורס
 												</p>
 												{% endif %}
