--- a/friends_forlife/app/templates/app/chip_search.html
+++ b/friends_forlife/app/templates/app/chip_search.html
@@ -77,7 +77,7 @@
 				<main id="main">
 					<div class="block">
 						<div class="mainTop"></div>
-						<div class="mainContent">
+						<div class="mainContent mainContentChipSearch">
 				    		<h1>חיפוש פרטי שבב</h1><br>
                                 <div class="dogstaying_add_form_details">
 
