--- a/friends_forlife/app/templates/app/dogstaying_add.html
+++ b/friends_forlife/app/templates/app/dogstaying_add.html
@@ -77,7 +77,7 @@
 				<main id="main">
 					<div class="block">
 						<div class="mainTop"></div>
-						<div class="mainContent">
+						<div class="mainContent mainContentDogstaying">
 				    		<h1>הוספת שהייה באומנה</h1><br>
                                 <div class="dogstaying_add_form_details">
 {##}
